set some css properties for the title and education placecard, current issue is to stop the about me section from spilling over into the gap between the two

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,29 +11,36 @@ ul {
 .header-box {
   background-color: antiquewhite;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  height: 80px;
   width: 40%;
   float: left; 
   border: 5px solid black;
   padding: 1 px; 
   margin: 1; 
+  word-wrap: break-word;
 }
 
 .image-box {
-
+  position: relative;
 }
 
 /* Background information "card" w/ education & job experience*/
 .background-information-box-float-right{
-  width: 50%;
+  height: 150px;
+  width: 40%;
   float: right;
+  border: 5px solid black;
+  padding: 1 px; 
+  margin: 1; 
+  word-wrap: break-word;
 }
 
 .education-placecard-display{
-
+  display: inline;
 }
 
 .work-placecard-display{
-
+  display: inline;
 }
 
 /*Project Columns*/
@@ -42,12 +49,17 @@ ul {
 
 }
 
-.rows {
-
+.rows:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .column4 {
-
+  float: left;
+  width: 30.33%;
+  border: 0.5px solid black;
+  padding: 1 px; 
 }
 
 /*Why I chose to join a bootcamp placecard at footer of page*/
